# src/models/connectionRequest.js
@@ -1,0 +1,43 @@
+const mongoose = require("mongoose");
+
+const connectionRequestSchema = new mongoose.Schema(
+  {
+    fromUserId: {
+      type: mongoose.Schema.Types.ObjectId,
+      required: true,
+      trim: true,
+    },
+    toUserId: {
+      type: mongoose.Schema.Types.ObjectId,
+      required: true,
+      trim: true,
+    },
+    status: {
+      type: String,
+      enum: {
+        values: ["interested", "ignored", "accepted", "rejected"],
+        message: `{VALUE} is incorrect status type`,
+      },
+      required: true,
+      trim: true,
+    },
+  },
+  { timestamps: true }
+);
+
+connectionRequestSchema.index({ fromUserId: 1, toUserId: 1 });
+
+// pre() is a middleware which work on event as i mention here save so it will work on save event so before the save this middleware will work and check the condition, if condition meet then it run the next function
+connectionRequestSchema.pre("save", function (next) {
+  if (this.fromUserId.equals(this.toUserId)) {
+    throw new Error("You are not allowed to send the request to yourself");
+  }
+  next();
+});
+
+const ConnectionRequest = mongoose.model(
+  "ConnectionRequest",
+  connectionRequestSchema
+);
+
+module.exports = ConnectionRequest;
